examples/test/testpolicy3137.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3137
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key5: value40
      key24: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value15
          key15: value2
          key13: value19
      podSelector:
        matchLabels:
          key0: value7
          key49: value38
